<resources>
    <string name="app_name">DesafioAndroid</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="bienveni_desaf_o_android">Bienveni@ Desafío Android</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hola">Hola</string>
    <string name="name">name</string>
    <string name="value">value</string>
    <string name="viewdetail">viewDetail</string>
    <string name="separator">Separator</string>
    <string name="__">_</string>
    <string name="fecha">Fecha</string>
    <string name="nombre">Nombre</string>
    <string name="valor">Valor</string>
    <string name="unidad">Unidad</string>
    <string name="c_digo">Código</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="actualizar">Actualizar</string>
    <string name="buscar">buscar</string>
    <string name="demo">demo</string>
</resources>